@@ -1,4 +1,5 @@
 
+ o Merge: fixed bug with vertices with no incoming nor outcoming edge.
  o fixed compilation issue with OCaml 3.12.1
 
 version 1.8.3, April 17, 2013
